Add Docker deployment configuration for production

--- a/OneDrive/Documents/Carbon Depict/docker-compose.yml
+++ b/OneDrive/Documents/Carbon Depict/docker-compose.yml
@@ -129,10 +129,11 @@ services:
     container_name: carbon-depict-app
     restart: unless-stopped
     environment:
-      NODE_ENV: production
-      VITE_API_URL: ${VITE_API_URL:-http://localhost:5500/api}
+      - NODE_ENV=production
+      - VITE_API_URL=${VITE_API_URL:-http://localhost:5500/api}
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     ports:
       - "${FRONTEND_PORT:-3500}:3500"
     networks:
@@ -143,6 +144,8 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    profiles:
+      - production
 
   # Nginx Reverse Proxy (optional - for production load balancing)
   nginx:
