--- a/OneDrive/Documents/Carbon Depict/.dockerignore
+++ b/OneDrive/Documents/Carbon Depict/.dockerignore
@@ -1,117 +1,65 @@
 # Dependencies
-node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
+node_modules/
+npm-debug.log
+yarn-error.log
 
 # Build outputs
-dist
-build
-.vite
-*.local
+dist/
+build/
+*.log
 
 # Environment files
 .env
 .env.local
-.env.production
 .env.development
-.env.*.local
+.env.production
 
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-!.vscode/settings.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# IDE
+.vscode/
+.idea/
 *.swp
 *.swo
-*~
+.cursor/
 
-# OS files
-Thumbs.db
+# OS
 .DS_Store
-
-# Testing
-coverage
-*.lcov
-.nyc_output
-
-# Cache
-.cache
-.parcel-cache
-.eslintcache
-
-# Temporary files
-tmp
-temp
-*.tmp
-*.temp
-
-# Docker
-.dockerignore
-Dockerfile*
-docker-compose*.yml
+Thumbs.db
+desktop.ini
 
 # Git
-.git
+.git/
 .gitignore
 .gitattributes
 
-# Documentation (optional - remove if you want docs in image)
+# OneDrive
+OneDrive_*
+
+# Documentation
 *.md
-docs
-LICENSE
+!README.md
 
-# CI/CD
-.github
-.gitlab-ci.yml
-.travis.yml
-azure-pipelines.yml
+# Test files
+test/
+__tests__/
+*.test.js
+*.spec.js
 
-# Development files
-.editorconfig
-.prettierrc
-.prettierignore
-.eslintrc*
-cypress
-cypress.config.js
-jest.config.js
-.babelrc
+# Coverage
+coverage/
+.nyc_output/
 
-# Database files
-*.sqlite
-*.sqlite3
-*.db
-
-# Uploads (will be mounted as volume)
-uploads/*
-!uploads/.gitkeep
-
-# Backups
-backups
+# Temporary files
+tmp/
+temp/
+*.tmp
 *.backup
 *.bak
 
-# Misc
-.env.example
-README.md
-CHANGELOG.md
-CONTRIBUTING.md
+# Server files (not needed in frontend build)
+server/
+
+# Scripts
+scripts/
+*.ps1
+*.sh
+*.bat
