--- a/OneDrive/Documents/Carbon Depict/Dockerfile
+++ b/OneDrive/Documents/Carbon Depict/Dockerfile
@@ -1,7 +1,10 @@
 # Multi-stage build for production-optimized Carbon Depict frontend
 
 # Stage 1: Build stage
-FROM node:18-alpine AS builder
+FROM node:20-alpine AS builder
+
+# Install dependencies for building
+RUN apk add --no-cache python3 make g++
 
 # Set working directory
 WORKDIR /app
@@ -10,7 +13,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production=false
+RUN npm ci --legacy-peer-deps
 
 # Copy source code
 COPY . .
@@ -19,37 +22,25 @@ COPY . .
 RUN npm run build
 
 # Stage 2: Production stage
-FROM nginx:alpine AS production
-
-# Install Node.js for any runtime requirements
-RUN apk add --no-cache nodejs npm
+FROM nginx:1.25-alpine AS production
 
 # Copy custom nginx config
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY nginx.default.conf /etc/nginx/conf.d/default.conf
+COPY --chown=nginx:nginx nginx.conf /etc/nginx/nginx.conf
+COPY --chown=nginx:nginx nginx.default.conf /etc/nginx/conf.d/default.conf
 
 # Copy built assets from builder stage
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder --chown=nginx:nginx /app/dist /usr/share/nginx/html
 
-# Create a non-root user
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nodejs -u 1001 && \
-    chown -R nodejs:nodejs /usr/share/nginx/html && \
-    chown -R nodejs:nodejs /var/cache/nginx && \
-    chown -R nodejs:nodejs /var/log/nginx && \
-    chown -R nodejs:nodejs /etc/nginx/conf.d && \
-    touch /var/run/nginx.pid && \
-    chown -R nodejs:nodejs /var/run/nginx.pid
-
-# Switch to non-root user
-USER nodejs
+# Create nginx cache directory
+RUN mkdir -p /var/cache/nginx && \
+    chown -R nginx:nginx /var/cache/nginx
 
 # Expose port
 EXPOSE 3500
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:3500/health || exit 1
+HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:3500 || exit 1
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
