--- a/OneDrive/Documents/Carbon Depict/server/package.json
+++ b/OneDrive/Documents/Carbon Depict/server/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "html2canvas": "^1.4.1",
+    "http-proxy-middleware": "^2.0.6",
     "ioredis": "^5.8.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
